[package]
name = "colink-protocol-registry"
version = "0.1.2"
edition = "2021"

[dependencies]
chrono = "0.4"
colink = "0.2.0"
prost = "0.10"
tokio = "1.18"
tracing = "0.1"

[build-dependencies]
prost-build = "0.10"

[dev-dependencies]
hex = "0.4"
secp256k1 = { version = "0.21.2", features = ["rand-std"] }
