[package]
name = "colink-protocol-registry"
version = "0.1.3"
edition = "2021"

[dependencies]
chrono = "0.4"
colink = "0.2.2"
fs4 = { version = "0.6", features = ["sync"] }
prost = "0.10"
tokio = "1.18"
tracing = "0.1"

[build-dependencies]
prost-build = "0.10"

[dev-dependencies]
hex = "0.4"
secp256k1 = { version = "0.21.2", features = ["rand-std"] }
